--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
     </header>
     <main>
         <div>
-
+            <form>
+                <label for="movie-title">Movie Title:</label>    
+                <input name="movie-title" id="movie-title" type="text"/>
+                <label for="movie-actors">Actor(s):</label>    
+                <input name="movie-actors" id="movie-actors" type="text"/>
+                <label for="rating">Rating:</label>
+                <select name="rating">
+                    <option>
+                        Select One
+                    </option>
+                    <option value="r">
+                        R
+                    </option>
+                    <option value="pg-13">
+                        PG-13
+                    </option>
+                    <option value="G">
+                        PG
+                    </option>
+                </select>
+            </form>
         </div>
         <div>
 
@@ -22,6 +42,5 @@
     <footer>
 
     </footer>
-    <
 </body>
 </html>
