--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             <form>
                 <label for="movie-title">Movie Title:</label>    
                 <input name="movie-title" id="movie-title" type="text"/>
-                <label for="movie-actors">Actor(s):</label>    
-                <input name="movie-actors" id="movie-actors" type="text"/>
                 <label for="rating">Rating:</label>
                 <select name="rating">
                     <option>
@@ -32,8 +30,19 @@
                     <option value="G">
                         PG
                     </option>
+
                 </select>
+                                    <!--
+                        Genres
+                        
+                    -->
             </form>
+            <main>
+                <!--Search Results Go Here-->
+                <div id="movie-result-container">
+                    
+                </div>
+            </main>
         </div>
         <div>
 
