--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
 <body>
     <header>
         <h1>Date Night</h1>
-        <label for="email">Enter your email:</label>
+        <label for="email" id="eml">Email:</label>
         <input type="email" id="email" name="email">
-        <label for="pwd">Password:</label>
+        <label for="pwd" id="pwdlbl">Password:</label>
         <input type="password" id="pwd" name="pwd">
-        <button onclick="login()">Submit</button>
+        <button onclick="signup()" id ="ca-button" >Create An Account</button>
+        <button onclick="login()" id ="login-button">Login</button>
         <p id="login-error" class = "hide"> *login error </p>
+        <p id="signout-error" class = "hide"> *signout error </p>
+        <button onclick ="signOut()" id="signout-btn" class = "hide"> SignOut </button>
+        
     </header>
     <main>
         <div>
+                <h2></h2>
                 <label for="movie-title">Movie Title:</label>    
                 <input name="movie-title" id="movie-title" type="text"/>
                 <label for="rating">Rating:</label>
