--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <header>
         <h1>Date Night</h1>
+        <div id="pageTitle">
+        </div>
         <label for="email" id="eml">Email:</label>
         <input type="email" id="email" name="email">
         <label for="pwd" id="pwdlbl">Password:</label>
