--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Date Night</title>
-<<<<<<< HEAD
     <!-- two lines below include less CSS framework -->
-=======
-     <!-- two lines below include less CSS framework -->
-     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Ubuntu&display=swap" rel="stylesheet">
->>>>>>> 323cf7f422709d7cb7e614b3f5664acfaf81df91
     <link rel="stylesheet/less" type="text/css" href="assets/css/style.less" />
 </head>
 
@@ -56,9 +51,14 @@
                 
             <main>
                 <!--Search Results Go Here-->
-                <div id="movie-result-container"></div>
-                <p id="displayError" class="hide">Please fill out the title field before submitting</p>
-                <p id="wrongInput" class="hide">Something Went wrong</p>
+                <div id="favsList">
+                    <h2>Your Favorites⭐</h2>
+                </div>
+                <div id="movie-result-container">
+                    <p id="displayError" class="hide">Please fill out the title field before submitting</p>
+                    <p id="wrongInput" class="hide">Something Went wrong</p>
+                </div>
+
             </main>
         </div>
         <div>
